src/test/deca/syntax/invalid/provided/parentheses.deca
// Description:
//   Extra Parentheses
//
// Résultats:
//   :3:13: extraneous input ')' expecting ';'
{
float x = (5));
}
